--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 98.5vw;
-  height: 550vh;
+  width: auto;
+  height: auto;
   background-color: rgba(247, 242, 242, 0.3);
 }
 
@@ -54,6 +54,22 @@ header nav ul li a {
   color: white;
 }
 
+header nav ul li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0; /* Letakkan tepat di bawah teks */
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.2s ease;
+}
+
+header nav ul li a:hover::after {
+  transform: scaleX(1);
+}
 header nav .menu-container {
   margin-left: 1.25rem;
   display: flex;
@@ -448,3 +464,4 @@ input[type='date'] {
   }
   
 }
+@media (min-width: 320px) and (max-width: 768px)
